--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,16 @@ version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
 
-sourceCompatibility = 1.5
+sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+    testCompile ("junit:junit:4.12")
+    testCompile ("org.assertj:assertj-core:3.5.2")
+    testCompile ("org.mockito:mockito-core:2.7.22")
+
+
 }
