--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,43 @@
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath "org.springframework.boot:spring-boot-gradle-plugin:1.4.0.RELEASE"
+    }
+}
+
+plugins {
+    id "java"
+    id "idea"
+    id "war"
+    id "jacoco"
+}
+
 group 'com.cleancode.chapternine'
 version '1.0-SNAPSHOT'
 
-apply plugin: 'java'
-
-sourceCompatibility = 1.5
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 repositories {
     mavenCentral()
 }
 
+
+apply plugin: "spring-boot"
+
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
+    testCompile group: 'org.assertj', name: 'assertj-core', version: '3.6.1'
+    testCompile(
+            gradleTestKit()
+    )
+}
+
+test {
+    environment "SPRING_PROFILES_ACTIVE", "test"
+    jacoco {
+        enabled false
+    }
 }
